# cmake-good

./: CMakeLists.txt  ReadMe.md
Calculator/: CMakeLists.txt
Calculator/src/: Calculator.cpp  Calculator.hpp
example/: CMakeLists.txt
example/src/: main.cpp
inc/: Calculator.hpp
src/: Calculator.cpp  main.cpp
